creat list of products in Accounting section and it works and update all menu in accounitng section and creat insert html file for products

--- a/New_version/templates/ACC/Invoice/index.html
+++ b/New_version/templates/ACC/Invoice/index.html
@@ -100,7 +100,7 @@
 {% endblock %}
 
 {% block menu %}
-                          <div class="nk-sidebar-content">
+                         <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -126,7 +126,18 @@
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
-
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/ACC/Products" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb "></em></span>
+                                            <span class="nk-menu-text">محصولات</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/ACC/Products" class="nk-menu-link"><span class="nk-menu-text">لیست محصولات</span></a>
+                                            </li>
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
                                     <li class="nk-menu-item has-sub">
                                         <a href="/ACC/Tickets" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-chat-circle"></em></span>
