--- a/New_version/templates/ACC/Pre_Invoice/index.html
+++ b/New_version/templates/ACC/Pre_Invoice/index.html
@@ -127,7 +127,18 @@
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
-
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/ACC/Products" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb "></em></span>
+                                            <span class="nk-menu-text">محصولات</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/ACC/Products" class="nk-menu-link"><span class="nk-menu-text">لیست محصولات</span></a>
+                                            </li>
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
                                     <li class="nk-menu-item has-sub">
                                         <a href="/ACC/Tickets" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-chat-circle"></em></span>
