--- a/New_version/templates/IT/index.html
+++ b/New_version/templates/IT/index.html
@@ -134,17 +134,11 @@
                                                                     <span class="tb-sub text-primary">{{i[7]}}</span>
                                                                 </div>
                                                                 <div class="nk-tb-col tb-col-md">
-                                                                {% if i[5] == 0: %}
-                                                                    <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار</span></span>
-                                                                {% elif i[5] == 1:%}
-                                                                    <span class="tb-sub"><span class="badge rounded-pill bg-info">در حال ارسال</span></span>
-                                                                {% elif i[5] == 2:%}
-                                                                    <span class="tb-sub"><span class="badge rounded-pill bg-warning">لغو ارسال</span></span>
-                                                                {% elif i[5] == 3:%}
-                                                                    <span class="tb-sub"><span class="badge rounded-pill bg-danger">حذف شده</span></span>
-                                                                {% elif i[5] == 4:%}
-                                                                    <span class="tb-sub"><span class="badge rounded-pill bg-success">برگشت موفق</span></span>
-                                                                {% endif %}
+                                                            {% if i[5] == 0: %}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار</span></span>
+                                                            {% elif i[5] > 0:%}
+                                                                <span class="tb-sub"><span class="badge rounded-pill bg-info">مراحل انبارداری</span></span>
+                                                            {% endif %}
                                                                 </div>
 
                                                                 <div class="nk-tb-col nk-tb-col-action">
